v1.7.7 (22/07/2020)
- bug fix: logical error in creation of restraints script when adding 'module load ccp4/phenix' command

v1.7.6 (22/07/2020)
- bug fix: added 'module load ccp4/phenix' to restraints script in case not part of user bashrc file

v1.7.5 (21/07/2020)
- bug fix: remove obsolete 'module load mx' statement from xce_<restraints_prg> script which currently loads a gemmi incompatible ccp4 version

v1.7.4 (21/07/2020)
- bug fix: selected results not linked after parsing of auto-processing results
- enabled updates of message & progress bar during scoring of auto-processing results
- enabled updates of message & progress bar during DB update of pinIDs

v1.7.3 (20/07/2020)
- bug fix: ignore large temporary files in get_gda_barcodes which lead to memory errors
- removed obsolete PROASIS menu item
- bug fix: xce now reads already parsed auto-processing results correctly to speed up parsing

v1.7.2 (16/07/2020)
- show molprobity to-do list generated by buster-report in XCE COOT interface

v1.7.1 (13/07/2020)
- select auto-refinement from action box not from preferences

v1.7.0 (29/06/2020)
- implemented new pandda export routine which takes advantage of gemmi
- updated html export accordingly
- bug fix: order of commands changed in buster.sh to enable buster-report run on DLS cluster
- added links to buster-reports in refinement table
- calculate (2)fofc maps around ligand with ending _cut.ccp4
- calculate ligand CC with EDSTATS and display in refinement table

v1.6.29 (28/06/2020)
- added capture of person (and date) changing RefinementOutcome field in DB

v1.6.28 (28/06/2020)
- added capture of refiner and date of refinement in DB after refinement

v1.6.27 (28/06/2020)
- made water update optional when refining with with Buster

v1.6.26 (24/06/2020)
- added option for anisotropic B-factor refinement with Buster

v1.6.25 (22/06/2020)
- backup soakDB after restart and 'update database from filesystem'

v1.6.24 (22/06/2020)